# docs/swagger.json
@@ -59,6 +59,82 @@
                         "description": "Created"
                     }
                 }
+            },
+            "delete": {
+                "description": "delete all orders",
+                "tags": [
+                    "orders"
+                ],
+                "summary": "delete all orders",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/orders/me": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get all orders by user",
+                "tags": [
+                    "orders"
+                ],
+                "summary": "get all orders by user",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete all orders by user",
+                "tags": [
+                    "orders"
+                ],
+                "summary": "delete all orders by user",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/orders/me/status/{status}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "get all orders by status",
+                "tags": [
+                    "orders"
+                ],
+                "summary": "get all orders by status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "order status",
+                        "name": "status",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
             }
         },
         "/orders/status/{status}": {
@@ -195,6 +271,9 @@
                 "address": {
                     "type": "string"
                 },
+                "cartId": {
+                    "type": "string"
+                },
                 "city": {
                     "type": "string"
                 },
@@ -212,9 +291,6 @@
                 },
                 "postalCode": {
                     "type": "string"
-                },
-                "status": {
-                    "$ref": "#/definitions/models.OrderStatus"
                 },
                 "userId": {
                     "type": "string"
@@ -267,6 +343,13 @@
                     "$ref": "#/definitions/models.OrderStatus"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
